# trading-news-telegram-bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  config.py.example  deploy.sh  marketclose.sh  marketopen.sh  pyproject.toml  requirements.txt  tradingbot.py
trading-news-telegram-bot/: bot.py
