[tool.poetry]
name = "trading-news-telegram-bot"
version = "0.1.0"
description = "TO THE MOON!"
authors = ["Christopher Goh <chrisgzf@gmail.com>", "Jethro Kuan <jethrokuan95@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.7"
requests = "^2.25.1"
tweepy = "^3.10.0"
python-telegram-bot = "^13.1"
yfinance = "^0.1.55"
html5lib = "^1.1"
beautifulsoup4 = "^4.9.3"
pandas = "^1.2.1"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
isort = "^5.7.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["trading-news-telegram-bot"]
filter_files = true
known_first_party = "trading-news-telegram-bot"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
